--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ find_ups_product(larcorealg)
 find_ups_product(lardataobj)
 find_ups_product(lardataalg)
 find_ups_product(larcore)
-find_ups_product(larsim)
+find_ups_product(larevt)
 find_ups_product(xerces_c)
 find_ups_product(nutools)
 find_ups_geant4()
