--- a/larg4/Core/CMakeLists.txt
+++ b/larg4/Core/CMakeLists.txt
@@ -4,7 +4,18 @@
 # detector construction class.
 
 # Create a library called "artg4tk_core"
-art_make(MODULE_LIBRARIES "artg4tk_geantInit" "larg4_pluginActions_ParticleListAction_service"  "artg4tk_pluginDetectors_gdml" "${XERCESCLIB}" "${G4_LIB_LIST}" )
+art_make(
+MODULE_LIBRARIES
+  artg4tk_actionBase
+  artg4tk_geantInit
+  artg4tk_pluginDetectors_gdml
+  ${G4_LIB_LIST}
+  larg4_pluginActions_ParticleListAction_service
+  nutools_G4Base
+  nutools_ParticleNavigation
+  ${ROOT_BASIC_LIB_LIST}
+  ${XERCESCLIB}
+)
 
 # Install header files into the products area
 install_headers() 
