--- a/larg4/Core/CMakeLists.txt
+++ b/larg4/Core/CMakeLists.txt
@@ -9,6 +9,7 @@ MODULE_LIBRARIES
   artg4tk_actionBase
   artg4tk_geantInit
   artg4tk_pluginDetectors_gdml
+  artg4tk_services_PhysicsListHolder_service
   ${G4_LIB_LIST}
   larg4_pluginActions_ParticleListAction_service
   nutools_G4Base
