For spack and cetmodules

--- a/larg4/Analysis/CMakeLists.txt
+++ b/larg4/Analysis/CMakeLists.txt
@@ -1,8 +1,9 @@
+set(CMAKE_CXX_FLAGS "${Geant4_CXX_FLAGS} -Wno-shadow -Wno-unused-parameter")
 art_make(
   MODULE_LIBRARIES
     art_Framework_Core
     art_Framework_Principal
-    art_root_io_tfile_support ${ROOT_CORE}
+    art_root_io_tfile_support
     art_root_io_TFileService_service
     art_Framework_Services_Registry
     art_Persistency_Provenance
@@ -12,9 +13,9 @@ art_make(
     canvas
     cetlib_except
     fhiclcpp
-    ${G4ZLIB}
+    ${Geant4_LIBRARIES}    
     nusimdata_SimulationBase
-    ${ROOT_CORE}
-    ${ROOT_HIST}
-    ${ROOT_TREE}
+    ${ROOT_Core_LIBRARY}
+    ${ROOT_Hist_LIBRARY}
+    ${ROOT_Tree_LIBRARY}
 )
