--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,9 @@
 # use cmake 3.14 or later
 cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)
 
-project(larg4 LANGUAGES CXX)
-
-find_package(cetbuildtools REQUIRED)
-
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules $ENV{ART_DIR}/Modules)
-
+find_package( cetmodules )
+set(fcl_dir job)
+set(gdml_dir gdml)
 include(CetCMakeEnv)
 cet_cmake_env()
 
@@ -28,23 +25,10 @@ cet_set_compiler_flags(DIAGS CAUTIOUS WERROR NO_UNDEFINED EXTRA_FLAGS -pedantic)
 
 cet_report_compiler_flags()
 
-find_ups_product(art)
-find_ups_product(art_root_io)
-find_ups_product(artg4tk)
-find_ups_product(canvas)
-find_ups_product(canvas_root_io)
-find_ups_product(cetlib)
-find_ups_product(clhep)
-find_ups_product(fhiclcpp)
-find_ups_geant4()
-find_ups_product(larcore)
-find_ups_product(larcoreobj)
-find_ups_product(lardataalg)
-find_ups_product(lardataobj)
-find_ups_product(messagefacility)
-find_ups_product(nusimdata)
-find_ups_product(nug4)
-
+find_package(artg4tk REQUIRED)
+find_package(larevt REQUIRED)
+include(${Geant4_USE_FILE})
+# macros for dictionary and simple_plugin
 include(ArtDictionary)
 include(ArtMake)
 include(BuildPlugins)
@@ -61,8 +45,7 @@ cet_find_library(ARTG4TK_SERVICES_DETECTORHOLDER_SERVICE NAMES artg4tk_services_
 add_subdirectory(fcl)
 add_subdirectory(gdml)
 add_subdirectory(larg4)
-add_subdirectory(ups)
-
+#add_subdirectory(ups)
+add_subdirectory(cmakeConfig)
 # packaging utility
-# this has to be last
-include(UseCPack)
+#include(UseCPack)
