Remove unnecessary dependencies.
- Remove unnecessary header includes.
- Remove unnecessary link-time dependencies.
- Rename a .cxx file to .cc.
- Accommodate artg4tk changes.

--- a/larg4/Services/CMakeLists.txt
+++ b/larg4/Services/CMakeLists.txt
@@ -1,34 +1,24 @@
 simple_plugin(
-  LArG4Detector service
+  LArG4Detector "service"
   SOURCE
     LArG4Detector_service.cc
     SimEnergyDepositSD.cc
     AuxDetSD.cc
   NOP
-    art_Framework_Core
-    art_Framework_Principal
-    art_Framework_Services_Registry
+    ${ART_FRAMEWORK_CORE}
+    ${ART_FRAMEWORK_PRINCIPAL}
     artg4tk_DataProducts_G4DetectorHits
     artg4tk_pluginDetectors_gdml
     artg4tk_services_DetectorHolder_service
-    art_Persistency_Provenance
-    ${Boost_FILESYSTEM_LIBRARY}
-    ${Boost_SYSTEM_LIBRARY}
-    canvas
-    cetlib
-    cetlib_except
-    clhep
-    fhiclcpp
+    ${ART_PERSISTENCY_PROVENANCE}
+    ${CLHEP}
     ${G4DIGITS_HITS}
     ${G4EVENT}
     ${G4GEOMETRY}
     ${G4GLOBAL}
     ${G4MATERIALS}
     ${G4PERSISTENCY}
-    larcorealg_Geometry
-    MF_MessageLogger
-    ${ROOT_CORE}
-    ${XERCESC}
+    ${MF_MESSAGELOGGER}
 )
 
 install_headers()
