--- a/larg4/CMakeLists.txt
+++ b/larg4/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Analysis)
 add_subdirectory(Core)
 add_subdirectory(pluginActions)
 add_subdirectory(Services)
+add_subdirectory(lists)
